# customer_churn_prediction

./: .gitignore  README.md  churn_library.py  churn_notebook.ipynb  churn_notebook_refactored.ipynb  churn_script_logging_and_tests.py  constants.py  pyproject.toml
