[tool.poetry]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Identify credit card customers that are most likely to churn."
authors = ["Gianluca Manca <gianluca.manca89@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "customer_churn_prediction"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
llvmlite = "^0.40.1"
numba = "^0.57.1"
shap = "^0.42.1"
joblib = "^1.3.2"
pandas = "^2.0.3"
numpy = "<1.25"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pylint = "^2.17.5"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
